# CardCollector

./: MEDIA_MANAGER.md  README.md  docker-compose.yml
server/: Cargo.toml  Config.tmpl.json  Dockerfile
server/media-types/: banner.json  card.json  collector.json  profile.json
server/media/originals/: .gitignore
server/sqlfiles/: add_image_hashes.sql  tables.sql
server/sqlfiles/migration/: media-manager-migration.py  new_cards.sql  new_cardtypes.sql  waifu.py
server/src/: config.rs  main.rs  sql.rs
server/src/admin/log/: logic.rs
server/src/admission/: mod.rs
server/src/admission/config/: data.rs  logic.rs  mod.rs
server/src/admission/forgot/: mod.rs
server/src/admission/login/: logic.rs  sql.rs
server/src/admission/logout/: sql.rs
server/src/admission/passchange/: data.rs  sql.rs
server/src/admission/refresh/: sql.rs
server/src/admission/register/: data.rs  logic.rs  sql.rs
server/src/admission/verify/: mod.rs
server/src/card/: mod.rs
server/src/card/get/: logic.rs  mod.rs
server/src/card/index/: logic.rs  sql.rs
server/src/card/request/: mod.rs
server/src/card/unlocked/: logic.rs
server/src/card/upgrade/: logic.rs
server/src/collector/: mod.rs
server/src/collector/config/: data.rs  logic.rs  mod.rs
server/src/collector/create/: data.rs  logic.rs  sql.rs
server/src/collector/get/: sql.rs
server/src/collector/index/: data.rs  logic.rs  sql.rs
server/src/collector/moderator/: mod.rs
server/src/collector/update/: data.rs  logic.rs  mod.rs  sql.rs
server/src/friend/accept/: data.rs  logic.rs  sql.rs
server/src/friend/add/: logic.rs  sql.rs
server/src/media/: cache.rs  config.rs  effect.rs  effect_registry.rs  manager.rs  mod.rs  routes.rs  storage.rs
server/src/notifications/: logic.rs  sql.rs
server/src/scripts/: resize_image_banner.rs  resize_image_card.rs  resize_image_square.rs  resize_image_to_ratio.rs
server/src/shared/: email.rs  id.rs  image_upload.rs  mod.rs  util.rs
server/src/user/: mod.rs
server/static/card/: .gitignore
server/static/collector/: collector-image-default
(+753 files in other folders)
