[package]
name = "card_collector"
version = "0.1.0"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
#rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["json"] }
rocketjson = "2.0.0"
#rocketjson = { version="1.3.3" }
#rocketjson = { path = "../../rocketjson/core" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.20"
figment = { version = "0.10.19", features = ["env", "toml", "json"] }
validator = { version = "0.20", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"
bcrypt = "0.10.1"
dotenv = "0.15.0"
jwt = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.9"
bincode = "1.3.3"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.8.5"
lettre = "0.10.4"
pyo3 = { version = "0.18.3", features = [ "auto-initialize" ] }
#rocket-multipart-form-data = "0.10.5"
#rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
#when rocket_db_pools is out, switch
