[package]
name = "card_collector"
version = "0.1.0"
authors = ["Nis5l <kirchler123@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocketjson = "2.0.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1.20"
figment = { version = "0.10.19", features = ["env", "toml", "json"] }
validator = { version = "0.20", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"
bcrypt = "0.17.1"
dotenv = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
bincode = "2.0.1"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
lettre = "0.11.19"
is_close = "0.1.3"
opencv = "0.97.2"
